# SwitchInfer

./: README.md
benchmark/: bin_processed_arrays_10cols.txt
common/: common.cpp
examples/batched-bench/: CMakeLists.txt  batched-bench.cpp
examples/main/: CMakeLists.txt  main.cpp
ggml/include/: ggml-cpu.h  ggml.h
ggml/src/: ggml-backend.cpp  ggml-impl.h  ggml.c
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cpu/llamafile/: sgemm.cpp
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-kv-cache.cpp  llama.cpp
